extract wall header layouts

--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -25,238 +25,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <View
-                    android:id="@+id/topSpacer"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/wall_top_spacer_height" />
-
-                <RelativeLayout
-                    android:id="@+id/wall_top_image_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/topSpacer"
-                    android:layout_marginTop="-78dp">
-
-                    <ImageView
-                        android:id="@+id/wall_top_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="160dp"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:background="@color/colorPrimaryDark"
-                        android:scaleType="centerCrop"
-                        tools:src="@drawable/image_wall_background" />
-
-                    <TextView
-                        android:id="@+id/topCaption"
-                        style="@style/semiBoldText"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_centerInParent="true"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:paddingTop="25dp"
-                        android:shadowColor="@color/black_transparent_154"
-                        android:shadowDx="1"
-                        android:shadowDy="1"
-                        android:shadowRadius="2"
-                        android:text="@string/wall"
-                        android:textAlignment="center"
-                        android:textAllCaps="true"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/font_size_36"
-                        android:visibility="gone"
-                        tools:visibility="gone" />
-
-                    <RelativeLayout
-                        android:id="@+id/wall_top_info_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/wall_top_image"
-                        android:layout_alignParentStart="true"
-                        android:layout_marginBottom="24dp">
-
-                        <LinearLayout
-                            android:id="@+id/wall_top_info"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/wall_team_left_name"
-                                fontPath="fonts/TitilliumWeb-SemiBold.ttf"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_marginEnd="4dp"
-                                android:layout_weight="1"
-                                android:gravity="end"
-                                android:maxLength="6"
-                                android:maxLines="1"
-                                android:paddingEnd="@dimen/padding_2"
-                                android:textColor="@color/white"
-                                android:textSize="24sp"
-                                android:textStyle="bold"
-                                tools:text="SCP" />
-
-                            <ImageView
-                                android:id="@+id/wall_team_left_image"
-                                android:layout_width="60dp"
-                                android:layout_height="@dimen/height_70"
-                                android:layout_centerVertical="true"
-                                android:layout_toEndOf="@id/wall_team_left_name"
-                                tools:src="@drawable/sportingportugal" />
-
-                            <TextView
-                                android:id="@+id/wall_team_vs"
-                                fontPath="fonts/TitilliumWeb-Light.ttf"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:padding="@dimen/padding_8"
-                                android:text="@string/vs"
-                                android:textColor="@color/white"
-                                android:textSize="23sp"
-                                tools:visibility="visible" />
-
-                            <ImageView
-                                android:id="@+id/wall_team_right_image"
-                                android:layout_width="60dp"
-                                android:layout_height="@dimen/height_70"
-                                android:layout_centerVertical="true"
-                                android:layout_toEndOf="@id/wall_team_vs"
-                                tools:src="@drawable/sportingportugal" />
-
-                            <TextView
-                                android:id="@+id/wall_team_right_name"
-                                fontPath="fonts/TitilliumWeb-SemiBold.ttf"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="4dp"
-                                android:layout_weight="1"
-                                android:gravity="start"
-                                android:maxLength="6"
-                                android:maxLines="1"
-                                android:padding="@dimen/padding_8"
-                                android:paddingStart="@dimen/padding_2"
-                                android:textColor="@color/white"
-                                android:textSize="24sp"
-                                android:textStyle="bold"
-                                tools:text="ASP" />
-
-                        </LinearLayout>
-
-                        <TextView
-                            android:id="@+id/wall_team_next_match"
-                            fontPath="fonts/TitilliumWeb-SemiBold.ttf"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/wall_top_info"
-                            android:layout_centerHorizontal="true"
-                            android:text="@string/match_next"
-                            android:textColor="?nextMatchTextPhoneColor" />
-
-                        <TextView
-                            android:id="@+id/wall_team_time"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/wall_team_next_match"
-                            android:layout_centerHorizontal="true"
-                            android:textColor="@color/white"
-                            tools:text="Thu 15 Feb - 3 days" />
-                    </RelativeLayout>
-
-                    <Button
-                        android:id="@+id/buttonTickets"
-                        android:layout_width="wrap_content"
-                        android:layout_height="32dp"
-                        android:minWidth="0dp"
-                        android:paddingStart="10dp"
-                        android:paddingEnd="10dp"
-                        android:layout_alignBottom="@id/wall_top_image"
-                        android:layout_alignParentEnd="true"
-                        android:textSize="12sp"
-                        android:layout_margin="8dp"
-                        android:background="@drawable/button_tickets"
-                        android:text="@string/tickets"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white" />
-
-                </RelativeLayout>
-
-                <LinearLayout
-                    android:id="@+id/login_holder"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/wall_top_image_container"
-                    android:layout_marginBottom="8dp"
-                    android:orientation="vertical"
-                    android:paddingTop="4dp"
+                <!--For XML preview only, actual header is in the adapter-->
+                <include
+                    layout="@layout/header_next_match"
                     android:visibility="gone"
-                    tools:visibility="visible">
+                    tools:visibility="visible" />
 
-                    <TextView
-                        android:id="@+id/textView2"
-                        style="@style/fontTitilliumWebLight"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:lineSpacingMultiplier="0.8"
-                        android:paddingBottom="4dp"
-                        android:paddingEnd="16dp"
-                        android:paddingStart="16dp"
-                        android:paddingTop="@dimen/padding_8"
-                        android:text="@string/access_full"
-                        android:textAlignment="center"
-                        android:textColor="@color/colorPrimaryVeryLight"
-                        android:textSize="20sp" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/margin_20"
-                        android:layout_marginTop="8dp"
-                        android:gravity="center"
-                        android:orientation="horizontal"
-                        android:paddingEnd="16dp"
-                        android:paddingStart="16dp">
-
-                        <Button
-                            android:id="@+id/join_now_button"
-                            style="?android:attr/borderlessButtonStyle"
-                            android:layout_width="0dp"
-                            android:layout_height="40dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/gym_bag_button_background"
-                            android:paddingEnd="32dp"
-                            android:paddingStart="32dp"
-                            android:text="@string/join"
-                            android:textAlignment="center"
-                            android:textAllCaps="false"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/font_size_19" />
-
-                        <Button
-                            android:id="@+id/login_button"
-                            style="?android:attr/borderlessButtonStyle"
-                            android:layout_width="0dp"
-                            android:layout_height="40dp"
-                            android:layout_gravity="center"
-                            android:layout_marginStart="8dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/light_button_edit_profile_image"
-                            android:gravity="center"
-                            android:paddingEnd="32dp"
-                            android:paddingStart="32dp"
-                            android:text="@string/sign_in"
-                            android:textAlignment="center"
-                            android:textAllCaps="false"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/font_size_19" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
+                <!--For XML preview only, actual header is in the adapter-->
+                <include
+                    layout="@layout/header_login_invitation"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/fragment_wall_recycler_view"
