--- a/SportsSideKick/app/src/main/res/layout/header_next_match.xml
+++ b/SportsSideKick/app/src/main/res/layout/header_next_match.xml
@@ -4,6 +4,8 @@
     android:id="@+id/wall_top_image_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="-30dp"
+    tools:layout_marginBottom="8dp"
     tools:showIn="@layout/fragment_wall">
 
     <ImageView
