--- a/SportsSideKick/app/src/main/res/layout/header_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/header_news.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="-16dp"
+    tools:layout_marginBottom="0dp"
     tools:showIn="@layout/fragment_news">
 
     <android.support.v7.widget.AppCompatImageView
