--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -33,6 +33,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/fragment_wall_recycler_view"
                 android:layout_width="match_parent"
+                android:scrollbars="vertical"
                 android:layout_height="match_parent"
                 tools:layout_below="@id/login_holder"
                 tools:paddingStart="16dp"
