--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -417,16 +417,19 @@
         android:layout_height="match_parent"
         android:clickable="true"
         android:focusable="false"
-        tools:layout_height="0dp">
+        tools:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/loginBackgroundImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:alpha="0.9"
-            android:foreground="#99000000"
             android:scaleType="centerCrop"
             tools:src="@drawable/background_sporting" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#99000000" />
 
         <LinearLayout
             android:layout_width="match_parent"
