--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -34,9 +34,13 @@
             android:id="@+id/backgroundImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:foreground="#99000000"
             android:scaleType="centerCrop"
             tools:src="@drawable/background_sporting" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#99000000" />
 
         <RelativeLayout
             android:id="@+id/forgot_password_container"
