show preview subheader when sharing news item

--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -673,8 +673,7 @@
                 <include
                     layout="@layout/wall_item_news"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="0dp" />
+                    android:layout_height="wrap_content" />
 
                 <include layout="@layout/include_input_field" />
 
