--- a/SportsSideKick/app/src/main/res/layout-large/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/fragment_login.xml
@@ -1,5 +1,4 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -276,7 +275,7 @@
                                 </RelativeLayout>
 
                                 <RelativeLayout
-                                    android:id="@+id/bottom_buttons_container_reset"
+                                    android:id="@+id/restoreButton"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:background="@drawable/button_login_login"
