--- a/SportsSideKick/app/src/main/res/layout/dialog_layout.xml
+++ b/SportsSideKick/app/src/main/res/layout/dialog_layout.xml
@@ -57,6 +57,7 @@
                 android:id="@+id/dialog_cancel_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="4dp"
                 android:layout_marginBottom="@dimen/margin_20"
                 android:background="?selectableItemBackgroundBorderless"
                 android:scaleType="centerInside"
@@ -73,6 +74,7 @@
             <ImageButton
                 android:id="@+id/dialog_ok_button"
                 android:layout_width="wrap_content"
+                android:layout_marginStart="4dp"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/margin_20"
                 android:background="?selectableItemBackgroundBorderless"
