--- a/SportsSideKick/app/src/main/res/layout/activity_main.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,8 @@
 
                 </TextSwitcher>
 
-                <ImageView
+                <ImageButton
+                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                     android:id="@+id/notificationsButton"
                     android:layout_width="@dimen/top_bar_logo_tema_size"
                     android:layout_height="match_parent"
