--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -463,7 +463,7 @@
                 android:text="@string/chat_with_friends_login"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="@dimen/font_size_20"
+                android:textSize="22sp"
                 tools:textStyle="bold" />
 
             <TextView
@@ -477,8 +477,7 @@
                 android:layout_marginBottom="100dp"
                 android:text="@string/login_slider_chat"
                 android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="@dimen/font_size_12" />
+                android:textColor="@color/white" />
 
             <!-- LOGIN CONTAINER -->
             <LinearLayout
@@ -499,6 +498,7 @@
                     android:text="@string/join"
                     android:textAlignment="center"
                     android:textAllCaps="false"
+                    fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                     android:textColor="@color/white"
                     android:textSize="@dimen/font_size_18" />
 
@@ -507,6 +507,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/margin_10"
+                    fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                     android:background="@drawable/button_login_login"
                     android:text="@string/sign_in"
                     android:textAlignment="center"
